  * don't ever delete anything.
  * keep the format consistent (79 char width, YYYY-MM-DD date format).

------------------------------------------------------------------------------

SUMMARY of changes for ode-0.12
- Refactoring of OdeMath method names
- new functions in DGeom
- Quickstep refactored and sped up
- Clean-up of demos
- Bug fixes

TODO
- Fix DemoBoxStack

2012-Apr-13 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Migrated QuickStep, LCP and parts of Matrix.

2012-Apr-10 Tilmann Zaschke
		* Migration to ode-0.12:
		  - Fixed all joint-files.

2012-Apr-09 Tilmann Zaschke
		* Migration to ode-0.12:
		  - 'finnished' include-files for now
		  - migrated DxBox and quickstep.
		  TODO Box is faulty!!!! 
		  
2012-Apr-08 Tilmann Zaschke
		* Migration to ode-0.12:
		  - odemath.h

2010-Oct-24 Tilmann Zaschke
		* Added missing Lo/HiStop functions in DAMotorJoint (Bug ID: 3088463)

2010-Jun-19 Tilmann Zaschke
		* Release of ode4j-0.11.1-j1.4
		   ******************************************************************

2010-Jun-08 Tilmann Zaschke
		* Updated javadoc for DHeightfieldData build(...) methods.

2010-Jun-07 Tilmann Zaschke
		* Implemented support for building DHeightfieldData from short[], 
		  float[] and double[].
		* API CHANGE:
		  - Changed API of DHeightField and DHeightFieldData to accept Object
		    instead of Object[] as type of data.
		   ******************************************************************

2010-May-30 Tilmann Zaschke
		* Release of ode4j-0.11.1-j1.3
		   ******************************************************************

2010-May-20 Tilmann Zaschke
		* Fixed recursion in DxBody - Bug ID: 3003719

2010-Feb-23 Tilmann Zaschke
		* Fixed drawstuff problem with ATI 10.1 and 10.2 driver under Linux:
		  Bug ID: 2957098

2010-Feb-03 Tilmann Zaschke
		* Release of ode4j-0.11.1-j1.2
		   ******************************************************************

2010-Jan-20 Tilmann Zaschke